Where and Include methods

--- a/Para.Schema/Para.Schema.csproj
+++ b/Para.Schema/Para.Schema.csproj
@@ -14,10 +14,12 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Para.Base\Para.Base.csproj" />
+      
     </ItemGroup>
 
-
-
+<ItemGroup>
+<ProjectReference Include="..\Para.Data\Para.Data.csproj" />
+</ItemGroup>
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="11.0.1" />
     </ItemGroup>
